Started to add a clarin bridge schema so that clarin profiles can be used for entity metadata. Much work on this is still required.